<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/viewFam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:text="@string/viewfam"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="178dp" />

    <Button
        android:id="@+id/basicTool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:text="@string/basic_tool_kit"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="275dp" />

    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="305dp"
        android:text="@string/contact_support"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="363dp" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/profTool"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="547dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="visible"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/buttonstranded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/viewFam"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="151dp"
        android:text="Stranded" />


</RelativeLayout>